library/src/libqtableview.h

typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QAbstractItemView QAbstractItemView;
typedef struct QHeaderView QHeaderView;
typedef struct QItemSelection QItemSelection;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QSize QSize;
typedef struct QStyleOptionViewItem QStyleOptionViewItem;
typedef struct QTableView QTableView;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWidget QWidget;
QTLIBC_API QTableView* QTableView_new(QWidget* parent);
QTLIBC_API QTableView* QTableView_new2();
QTLIBC_API QMetaObject* QTableView_MetaObject(const QTableView* self);
QTLIBC_API void* QTableView_Metacast(QTableView* self, const char* param1);
QTLIBC_API int QTableView_Metacall(QTableView* self, int param1, int param2, void** param3);
QTLIBC_API libqt_string QTableView_Tr(const char* s);
QTLIBC_API void QTableView_SetModel(QTableView* self, QAbstractItemModel* model);
QTLIBC_API void QTableView_SetRootIndex(QTableView* self, QModelIndex* index);
QTLIBC_API void QTableView_SetSelectionModel(QTableView* self, QItemSelectionModel* selectionModel);
QTLIBC_API void QTableView_DoItemsLayout(QTableView* self);
QTLIBC_API QHeaderView* QTableView_HorizontalHeader(const QTableView* self);
QTLIBC_API QHeaderView* QTableView_VerticalHeader(const QTableView* self);
QTLIBC_API void QTableView_SetHorizontalHeader(QTableView* self, QHeaderView* header);
QTLIBC_API void QTableView_SetVerticalHeader(QTableView* self, QHeaderView* header);
QTLIBC_API int QTableView_RowViewportPosition(const QTableView* self, int row);
QTLIBC_API int QTableView_RowAt(const QTableView* self, int y);
QTLIBC_API void QTableView_SetRowHeight(QTableView* self, int row, int height);
QTLIBC_API int QTableView_RowHeight(const QTableView* self, int row);
QTLIBC_API int QTableView_ColumnViewportPosition(const QTableView* self, int column);
QTLIBC_API int QTableView_ColumnAt(const QTableView* self, int x);
QTLIBC_API void QTableView_SetColumnWidth(QTableView* self, int column, int width);
QTLIBC_API int QTableView_ColumnWidth(const QTableView* self, int column);
QTLIBC_API bool QTableView_IsRowHidden(const QTableView* self, int row);
QTLIBC_API void QTableView_SetRowHidden(QTableView* self, int row, bool hide);
QTLIBC_API bool QTableView_IsColumnHidden(const QTableView* self, int column);
QTLIBC_API void QTableView_SetColumnHidden(QTableView* self, int column, bool hide);
QTLIBC_API void QTableView_SetSortingEnabled(QTableView* self, bool enable);
QTLIBC_API bool QTableView_IsSortingEnabled(const QTableView* self);
QTLIBC_API bool QTableView_ShowGrid(const QTableView* self);
QTLIBC_API int QTableView_GridStyle(const QTableView* self);
QTLIBC_API void QTableView_SetGridStyle(QTableView* self, int style);
QTLIBC_API void QTableView_SetWordWrap(QTableView* self, bool on);
QTLIBC_API bool QTableView_WordWrap(const QTableView* self);
QTLIBC_API void QTableView_SetCornerButtonEnabled(QTableView* self, bool enable);
QTLIBC_API bool QTableView_IsCornerButtonEnabled(const QTableView* self);
QTLIBC_API QRect* QTableView_VisualRect(const QTableView* self, QModelIndex* index);
QTLIBC_API void QTableView_ScrollTo(QTableView* self, QModelIndex* index, int hint);
QTLIBC_API QModelIndex* QTableView_IndexAt(const QTableView* self, QPoint* p);
QTLIBC_API void QTableView_SetSpan(QTableView* self, int row, int column, int rowSpan, int columnSpan);
QTLIBC_API int QTableView_RowSpan(const QTableView* self, int row, int column);
QTLIBC_API int QTableView_ColumnSpan(const QTableView* self, int row, int column);
QTLIBC_API void QTableView_ClearSpans(QTableView* self);
QTLIBC_API void QTableView_SelectRow(QTableView* self, int row);
QTLIBC_API void QTableView_SelectColumn(QTableView* self, int column);
QTLIBC_API void QTableView_HideRow(QTableView* self, int row);
QTLIBC_API void QTableView_HideColumn(QTableView* self, int column);
QTLIBC_API void QTableView_ShowRow(QTableView* self, int row);
QTLIBC_API void QTableView_ShowColumn(QTableView* self, int column);
QTLIBC_API void QTableView_ResizeRowToContents(QTableView* self, int row);
QTLIBC_API void QTableView_ResizeRowsToContents(QTableView* self);
QTLIBC_API void QTableView_ResizeColumnToContents(QTableView* self, int column);
QTLIBC_API void QTableView_ResizeColumnsToContents(QTableView* self);
QTLIBC_API void QTableView_SortByColumn(QTableView* self, int column, int order);
QTLIBC_API void QTableView_SetShowGrid(QTableView* self, bool show);
QTLIBC_API void QTableView_ScrollContentsBy(QTableView* self, int dx, int dy);
QTLIBC_API void QTableView_InitViewItemOption(const QTableView* self, QStyleOptionViewItem* option);
QTLIBC_API void QTableView_PaintEvent(QTableView* self, QPaintEvent* e);
QTLIBC_API void QTableView_TimerEvent(QTableView* self, QTimerEvent* event);
QTLIBC_API int QTableView_HorizontalOffset(const QTableView* self);
QTLIBC_API int QTableView_VerticalOffset(const QTableView* self);
QTLIBC_API QModelIndex* QTableView_MoveCursor(QTableView* self, int cursorAction, int modifiers);
QTLIBC_API void QTableView_SetSelection(QTableView* self, QRect* rect, int command);
QTLIBC_API QRegion* QTableView_VisualRegionForSelection(const QTableView* self, QItemSelection* selection);
QTLIBC_API libqt_list /* of QModelIndex* */ QTableView_SelectedIndexes(const QTableView* self);
QTLIBC_API void QTableView_UpdateGeometries(QTableView* self);
QTLIBC_API QSize* QTableView_ViewportSizeHint(const QTableView* self);
QTLIBC_API int QTableView_SizeHintForRow(const QTableView* self, int row);
QTLIBC_API int QTableView_SizeHintForColumn(const QTableView* self, int column);
QTLIBC_API void QTableView_VerticalScrollbarAction(QTableView* self, int action);
QTLIBC_API void QTableView_HorizontalScrollbarAction(QTableView* self, int action);
QTLIBC_API bool QTableView_IsIndexHidden(const QTableView* self, QModelIndex* index);
QTLIBC_API void QTableView_SelectionChanged(QTableView* self, QItemSelection* selected, QItemSelection* deselected);
QTLIBC_API void QTableView_CurrentChanged(QTableView* self, QModelIndex* current, QModelIndex* previous);
QTLIBC_API libqt_string QTableView_Tr2(const char* s, const char* c);
QTLIBC_API libqt_string QTableView_Tr3(const char* s, const char* c, int n);
QTLIBC_API void QTableView_RowMoved(QTableView* self, int row, int oldIndex, int newIndex);
QTLIBC_API void QTableView_ColumnMoved(QTableView* self, int column, int oldIndex, int newIndex);
QTLIBC_API void QTableView_RowResized(QTableView* self, int row, int oldHeight, int newHeight);
QTLIBC_API void QTableView_ColumnResized(QTableView* self, int column, int oldWidth, int newWidth);
QTLIBC_API void QTableView_RowCountChanged(QTableView* self, int oldCount, int newCount);
QTLIBC_API void QTableView_ColumnCountChanged(QTableView* self, int oldCount, int newCount);